--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "*.{js,jsx,ts,tsx}": "yarn lint --fix"
   },
   "devDependencies": {
-    "eslint": "8.50.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.50.0",
     "eslint-config-next": "13.5.2",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.4.2",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "postcss": "8.4.30",
@@ -37,6 +40,6 @@
     "next-compose-plugins": "^2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "typescript": "^5.2.2"
   }
 }
