--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
   "recommendations": [
     "aaron-bond.better-comments",
-    "coenraads.bracket-pair-colorizer-2",
     "streetsidesoftware.code-spell-checker",
     "jasonnutter.vscode-codeowners",
     "dsznajder.es7-react-js-snippets",
@@ -10,6 +9,7 @@
     "mhutchie.git-graph",
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
-    "editorconfig.editorconfig"
+    "editorconfig.editorconfig",
+    "clinyong.vscode-css-modules"
   ]
 }
