--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "clean": "rm -rf {packages/*/,}node_modules yarn.lock",
     "reinstall": "yarn clean && yarn install",
-    "export": "yarn build && NEXT_PUBLIC_IS_EXPORT=true next export",
+    "export": "NEXT_PUBLIC_IS_EXPORT=true yarn build ",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,js,jsx}\"",
     "prepare": "husky install"
@@ -18,6 +18,8 @@
     "*.{js,jsx,ts,tsx}": "yarn lint --fix"
   },
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.11.0",
+    "@types/css-modules": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.50.0",
@@ -32,6 +34,11 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
