--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,24 +11,29 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "typeRoots": ["./src/types"],
+    "jsx": "react",
     "incremental": true,
     "declaration": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".eslintrc.cjs"
+    ".eslintrc.cjs",
+    "wwwroot/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
